--- a/templates/design/project_detail.html
+++ b/templates/design/project_detail.html
@@ -194,7 +194,9 @@ document.addEventListener('DOMContentLoaded', function() {
                     const statusHtml = `<span class="badge ${statusBadgeClass}">${task.status}</span>`;
 
                     tasksHtml += `<li class="list-group-item d-flex justify-content-between align-items-center" data-task-id="${task.id}">
-                                      <div>${task.title}${fileLinkIcon}</div>
+                                      <div>${task.title}${fileLinkIcon}<a href="/design/tasks/${task.id}" class="ms-2" title="View Details & Comments">
+                          <i class="bi bi-chat-right-text"></i>
+                      </a></div>
                                       <div class="d-flex align-items-center gap-3">
                                           ${statusHtml}
                                           <div class="assignment-cell" style="min-width: 400px;">${assignmentCellHtml}</div>
