--- a/templates/base.html
+++ b/templates/base.html
@@ -204,18 +204,28 @@
                             <i class="bi bi-speedometer2 me-2"></i> Design Dashboard
                         </a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="/design/projects/new">
                             <i class="bi bi-plus-circle me-2"></i> New Project
+                        </a>
+                    </li> -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="/design/v2/projects/new">
+                            <i class="bi bi-plus-circle-dotted me-2"></i> New Project (V2)
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/design/v2/projects">
+                            <i class="bi bi-folder2-open me-2"></i> Manage Projects (V2)
                         </a>
                     </li>
                     {% endif %}
                     {% if 'Design Manager' in user_roles or 'Document Controller' in user_roles or 'Technical Engineer' in user_roles %}
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="/design/projects">
                             <i class="bi bi-folder2-open me-2"></i> Manage Projects
                         </a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link" href="/design/projects/completed">
                             <i class="bi bi-archive-fill me-2"></i> Completed Projects
@@ -378,18 +388,28 @@
                             <i class="bi bi-speedometer2 me-2"></i> Design Dashboard
                         </a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="/design/projects/new">
                             <i class="bi bi-plus-circle me-2"></i> New Project
+                        </a>
+                    </li> -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="/design/v2/projects/new">
+                            <i class="bi bi-plus-circle-dotted me-2"></i> New Project (V2)
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/design/v2/projects">
+                            <i class="bi bi-folder2-open me-2"></i> Manage Projects (V2)
                         </a>
                     </li>
                     {% endif %}
                     {% if 'Design Manager' in user_roles or 'Document Controller' in user_roles or 'Technical Engineer' in user_roles %}
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="/design/projects">
                             <i class="bi bi-folder2-open me-2"></i> Manage Projects
                         </a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link" href="/design/projects/completed">
                             <i class="bi bi-archive-fill me-2"></i> Completed Projects
